<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/smsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_time"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TimePicker
        android:id="@+id/startTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center" />

    <Button
        android:id="@+id/startSwishing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />
    
    <TextView
        android:id="@+id/gotoHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoHelp"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</LinearLayout>